<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.laura.madgame2.diceroll.RollDiceActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="276dp"
        android:layout_height="199dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="-92dp"
        android:layout_marginTop="93dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="279dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/cheat_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@android:color/darker_gray"
                android:text="Schummeln"
                tools:layout_editor_absoluteX="208dp"
                tools:layout_editor_absoluteY="202dp" />

            <Button
                android:id="@+id/roll_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="175dp"
                android:layout_height="50dp"
                android:layout_below="@+id/dice_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="11dp"
                android:backgroundTint="@android:color/holo_green_light"
                android:text="Würfeln"
                tools:layout_editor_absoluteX="82dp"
                tools:layout_editor_absoluteY="202dp" />

            <ImageView
                android:id="@+id/dice_view"
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="12dp"
                app:srcCompat="@drawable/dice_standard"
                tools:layout_editor_absoluteX="149dp"
                tools:layout_editor_absoluteY="110dp" />


        </RelativeLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
