<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.laura.madgame2.MainActivity"
    >

    <Button
        android:id="@+id/btnMultiplayer"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:elevation="0dp"
        android:onClick="setMultiplayerActivity"
        android:text="Multiplayer"
        android:textSize="17sp"
        android:layout_marginRight="28dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="39dp" />

    <!-- ############# Play Now #############-->
    <Button
        android:id="@+id/bt_playNow"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:onClick="onClickPlayNow"
        android:text="PLAY NOW"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="39dp"
        android:layout_marginLeft="28dp"
        app:layout_constraintLeft_toLeftOf="parent" />
    <!-- #####################################-->
    <Button
        android:id="@+id/button"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="66dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:onClick="setRollDiceActivity"
        android:text="Roll the Dice"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_highscore"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="66dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:onClick="onClickShowHighscores"
        android:text="Highscores"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="328dp"
        android:layout_height="229dp"
        app:srcCompat="@drawable/hintergrund_figuren"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
