...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.laura.madgame2.PlayField">

    <ImageView
        android:id="@+id/iv_mad_play_field"
        android:layout_width="350dp"
        android:layout_height="350dp"
        app:srcCompat="@drawable/menschenaergern_01"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintTop_toTopOf="parent"
...
        app:layout_constraintVertical_bias="0.09"
        android:clickable="true"
        android:onClick="click"/>


    <ImageView
        android:id="@+id/iv_player1_figure0"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:srcCompat="@drawable/fig_green_one"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline16"
        app:layout_constraintRight_toLeftOf="@+id/guideline15"
...
        android:layout_height="wrap_content"
        android:id="@+id/guideline18"
        app:layout_constraintGuide_begin="430dp"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:onClick="diceRoll"
        android:text="Würfeln"
        app:layout_constraintRight_toLeftOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_cheated"
...
