<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.laura.madgame2.MultiplayerActivity">

    <Button
        android:id="@+id/btnChooseName"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="Choose Name"
        android:onClick="setName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019" />

    <Button
        android:id="@+id/btnHostGame"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:onClick="hostGame"
        android:text="Host Game"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.797"
        app:layout_constraintBottom_toTopOf="@+id/btnJoinGame" />

    <Button
        android:id="@+id/btnJoinGame"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:onClick="joinGame"
        android:text="Join Game"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.695" />

    <EditText
        android:id="@+id/inputIp"
        android:layout_width="363dp"
        android:layout_height="57dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="Enter IP (e.g. 123.456.7.8 : 12345)"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/btnJoinGame"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


    <EditText
        android:id="@+id/showEnteredName"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:editable="false"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btnHostGame"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChooseName"
        app:layout_constraintVertical_bias="0.44"
        tools:editable="false">

    </EditText>

</android.support.constraint.ConstraintLayout>
